--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,14 @@
 .whitebg {
   background: #fff;
 }
+
 .nopaddingmargin {
   padding: 0px !important;
   margin: 0px !important;
+}
+
+.input:hover,
+.input:focus {
+  border: 1px solid #d9d9d9 !important;
+  box-shadow: none !important;
 }
