--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -25,3 +25,23 @@
   width: 40px;
   height: 40px;
 }
+
+.moduleName {
+  display: inline-block;
+  font-size: 22px;
+  line-height: 24px;
+  padding-left: 8px;
+  position: relative;
+  top: -1.5px;
+  vertical-align: middle;
+}
+
+.searchInput,
+.searchInput input {
+  border-radius: 8px !important;
+  background: #f1f3f4 !important;
+}
+
+.searchInput:focus {
+  background: #fff;
+}
