--- a/src/components/ListNotes/ListNotes.module.css
+++ b/src/components/ListNotes/ListNotes.module.css
@@ -3,14 +3,22 @@
 }
 
 .note {
-  border: 1px solid red;
+  height: 200px;
+  border-radius: 8px !important;
 }
+
+.notedescription :global(::webkit-scrollbar-track) {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
 .note:hover .controls {
   transition: all 0.3s linear;
   opacity: 1;
 }
 .controls {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   height: 30px;
