--- a/src/components/ListNotes/ListNotes.module.css
+++ b/src/components/ListNotes/ListNotes.module.css
@@ -7,13 +7,18 @@
   border-radius: 8px !important;
 }
 
-.notedescription :global(::webkit-scrollbar-track) {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  background-color: #f5f5f5;
+.note :global(.anticon-pushpin) {
+  opacity: 0;
+  padding: 5px;
 }
 
-.note:hover .controls {
+.note :global(.anticon-pushpin:hover) {
+  border-radius: 50% !important;
+  background: #eee;
+}
+
+.note:hover .controls,
+.note:hover :global(.anticon-pushpin) {
   transition: all 0.3s linear;
   opacity: 1;
 }
