--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,6 @@
+body {
+  font-family: "Roboto", Arial, sans-serif !important;
+}
 .whitebg {
   background: #fff;
 }
@@ -7,8 +10,6 @@
   margin: 0px !important;
 }
 
-.input:hover,
-.input:focus {
-  border: 1px solid #d9d9d9 !important;
-  box-shadow: none !important;
+.layout {
+  height: "100vh";
 }
