--- a/src/components/ListNotes/ListNotes.module.css
+++ b/src/components/ListNotes/ListNotes.module.css
@@ -7,6 +7,10 @@
   min-height: 150px;
 }
 
+.note :global(.ant-card-body) {
+  padding: 15 px !important;
+}
+
 .note :global(.anticon-pushpin) {
   opacity: 0;
   padding: 5px;
@@ -22,27 +26,6 @@
   transition: all 0.3s linear;
   opacity: 1;
 }
-.controls {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  height: 30px;
-  width: 100%;
-  opacity: 0;
-  transition: all 0.3s linear;
-}
-.controls :global(.anticon) {
-  width: 28px !important;
-  text-align: center;
-  padding: 8px;
-  transition: all 0.3s linear;
-}
-.controls :global(.anticon:hover) {
-  cursor: pointer;
-  opacity: 0.87;
-  background-color: rgba(95, 99, 104, 0.157);
-  border-radius: 50%;
-}
 
 :global(.ant-popover-inner-content) {
   padding: 0px !important;
@@ -50,4 +33,19 @@
 
 .notes :global(.react-grid-item.react-grid-placeholder) {
   background: #fff;
+}
+
+.controls {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 30px;
+  width: 100%;
+  /* opacity: 0; */
+  transition: all 0.3s linear;
+  margin-left: 15px;
+}
+
+.controls :global(.ant-space-item) {
+  margin-right: 10%;
 }
