--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,7 +28,7 @@
 
 .moduleName {
   display: inline-block;
-  font-size: 22px;
+  font-size: 1.37rem;
   line-height: 24px;
   padding-left: 8px;
   position: relative;
